Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89625

QJsonObject The take function caused an error!!

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.9, 6.0.1, 6.1.0 Alpha
    • 5.15.2
    • Core: Other
    • None
    • window10
    • Windows
    • 00b759a8d06dbec42232b1b8748c0725da7ced00 (qt/qtbase/dev) 9b43d8a98aed87da9fb366cd916cd2e7747090db (qt/qtbase/6.0) 41830b812e5883ff7b98fa1f5779df4648738829 (qt/tqtc-qtbase/tqtc/lts-5.15)

          QJsonObject json;
          QJsonArray a;
          a.append("abc1");
          a.append("abc2");
          a.append("abc3");
          json.insert("key1",a);
          json.insert("key2","value2");
          json.insert("key3","value3");
      
          QJsonObject json2 = json;
      
          qDebug() << "00000----" << json << json2;
      
          json.take("key1");
      
          qDebug() << "11111----" << json << json2;
      
      09:28:58: Starting E:\work\t10\build-MetaObjectTest-Desktop_Qt_5_15_2_MinGW_32_bit-Release\release\MetaObjectTest.exe ...
      00000---- QJsonObject({"key1":["abc1","abc2","abc3"],"key2":"value2","key3":"value3"}) QJsonObject({"key1":["abc1","abc2","abc3"],"key2":"value2","key3":"value3"})
      11111---- QJsonObject({"key2":"value2","key3":"value3"}) QJsonObject({"key1":null,"key2":"value2","key3":"value3"})
      09:29:59: E:\work\t10\build-MetaObjectTest-Desktop_Qt_5_15_2_MinGW_32_bit-Release\release\MetaObjectTest.exe exited with code 0
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            angelus li maoqing
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes